kubernetes/servicemesh/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue
  name: blue
  namespace: project
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: blue
