kubernetes/servicemesh/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: green
  name: green
  namespace: project
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: green
