kubernetes/servicemesh/dummy-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
  name: dummy-ingress
  namespace: project
spec:
  rules:
    - host: dummy.so1pro2g3.tk
      http:
        paths:
          - backend:
              serviceName: dummy
              servicePort: 5000
